# doom-scroll-ads

./: .gitignore  README.md  pyproject.toml
assets/: products.json
assets/prompts/: extract_context_product.txt  extract_context_user.txt  extract_context_x_history.txt  image_generation.txt  product_selection.txt
scripts/: launch.py  parse_products.py  parse_videos_didemo.py  parse_videos_msrvtt.py  parse_videos_panda70m.py
scripts/preprocess/: parse_videos.py
src/das/: ad_generation.py  ad_generation_dataclasses.py  ad_performance.py  product_metadata.py  scroll_ui.py  utils.py
